--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<mate charset="UTF-8">
-<mate http-equiv="X-UA-compatible" content="IE=edge">
-<mate name="viewport" content="widht=device-widht, initial-scale=1.0">
-<title>document</title>
-<link rel="stylesheet" href="style.css">
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-</body> 
-
-</h1>vai ser uma imagem aqui</h1>
+<body>
+    <header>
+        <h1>Vai ser uma imagem aqui</h1>
+        <ul>
+            <li>Escola</li>
+            <li>Estudante</li>
+        </ul>
+    </header>
 
 </body>
 </html>
