--- a/index.html
+++ b/index.html
@@ -4,17 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Janaina</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudante</li>
+
+    <header class="cabecalho">
+        <img class="cabecalho-imagem" src="./img/alurastart logo 1.png" alt="logo da alura start">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudante</li>
         </ul>
     </header>
+
+    <section class="escola">
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+                    <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+                    <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+                   <img class="escola-imagem" src="./img/disabled student-amico.png" alt="Professora no quadro">
+      </section>
 
 </body>
 </html>
