--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
     </header>
 
     <section class="escola">
-        <h2 class="escola-titulo">Sobre a Escola</h2>
-                    <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
-                    <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
-                   <img class="escola-imagem" src="./img/disabled student-amico.png" alt="Professora no quadro">
-      </section>
+        <div class="escola-div-conteudo">
+            <h2 class="escola-titulo">Sobre a Escola</h2>
+            <p class="escola-texto-um">A Escola Alura foi fundada em 2010 e tem como objetivo ensinar Pensamento Computacional, através do ensino de  Programação.</p>
+            <p class="escola-texto-dois">A turma mais estudiosa e famosa é a Segunda Série A. Nós somos super unidos e a turma favorita por todos os professores e professoras que nos ajudam!</p>
+        </div>
+        <img class="escola-imagem" src="./img/disabled student-amico.png" alt="logo da alura start">
+    </section>
+
 
 </body>
 </html>
